tests/baselines/reference/downlevelLetConst18.errors.txt
downlevelLetConst18.ts(4,14): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
downlevelLetConst18.ts(8,14): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.


==== downlevelLetConst18.ts (2 errors) ====
    'use strict'
    
    for (let x; ;) {
        function foo() { x };
                 ~~~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
    }
    
    for (let x; ;) {
        function foo1() { x };
                 ~~~~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
    }
    
    for (let x; ;) {
        (() => { x })();
    }
    
    for (const x = 1; ;) {
        (() => { x })();
    }
    
    for (let x; ;) {
        ({ foo() { x }})
    }
    
    for (let x; ;) {
        ({ get foo() { return x } })
    }
    
    for (let x; ;) {
        ({ set foo(v) { x } })
    }
    